Closed Bug 472022 Opened 17 years ago Closed 17 years ago

crash [@ nsPop3Sink::AbortMailDelivery]

Categories

(MailNews Core :: Networking: POP, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.1b3

People

(Reporter: wsmwk, Assigned: mkmelin)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

crash [@ nsPop3Sink::AbortMailDelivery] trunk only afaict from crash-stats and talkback bp-98d4cbe9-8038-41b4-a417-95d6a2081217 nsPop3Sink::AbortMailDelivery nsPop3Sink.cpp:535 nsPop3Protocol::GetStat nsPop3Protocol.cpp:1965 nsPop3Protocol::ProcessProtocolState nsPop3Protocol.cpp:3556 nsMsgProtocol::OnDataAvailable nsMsgProtocol.cpp:347 nsInputStreamPump::OnStateTransfer netwerk/base/src/nsInputStreamPump.cpp:508 nsInputStreamPump::OnInputStreamReady netwerk/base/src/nsInputStreamPump.cpp:398 nsInputStreamReadyEvent::Run xpcom/io/nsStreamUtils.cpp:111 nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:510 NS_ProcessNextEvent_P nsThreadUtils.cpp:227 nsBaseAppShell::Run widget/src/xpwidgets/nsBaseAppShell.cpp:170
Attached patch proposed fix — — Splinter Review
Don't know why, but it thinkable in an abort delivery situation m_tmpDownloadFile might be null, at least that's what it is.
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #355296 - Flags: superreview?(bienvenu)
Attachment #355296 - Flags: review?(bienvenu)
Attachment #355296 - Flags: superreview?(bienvenu)
Attachment #355296 - Flags: superreview+
Attachment #355296 - Flags: review?(bienvenu)
Attachment #355296 - Flags: review+
Comment on attachment 355296 [details] [diff] [review] proposed fix thx, Magnus.
changeset: 1555:409a9e87f1da http://hg.mozilla.org/comm-central/rev/409a9e87f1da ->FIXED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
OS: Windows Vista → All
Hardware: x86 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b3
Product: Core → MailNews Core
Crash Signature: [@ nsPop3Sink::AbortMailDelivery]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: