Bug 472022: crash [@ nsPop3Sink::AbortMailDelivery]. r+sr=bienvenu